--- a/macro_paper.tex
+++ b/macro_paper.tex
@@ -83,8 +83,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Implementing Package Settings
 
-\graphicspath{{figures/}{../figures/}}
-
 \begin{document}
 
 % -----------------------------------------------------------------------------
@@ -238,7 +236,7 @@ Cleveland, Ohio 44106-7079, USA}
 
         \begin{figure}[h]
             \centering
-            \includegraphics[width=\linewidth]{macro_schematic/macro_schematic.pdf}
+            \includegraphics[width=\linewidth]{macro_schematic.pdf}
             \caption{\textit{(Not to scale)} Graphic representation of macro plasma channel seeding continuous leader. Macro plasma trail expands to maximum radius $R_{I}^{\rm{max}}$ before cooling. As $v_{\rm{step}} < v_{\rm{macro}} < v_{\rm{leader}}$, the lightning-leader takes no ``steps", instead propagating continuously with the macro trail.}
             \label{fig:macro_graphic}
         \end{figure}
@@ -341,7 +339,7 @@ Cleveland, Ohio 44106-7079, USA}
     The surface area of Jupiter is 125 times that of Earth, suggesting that it is a potentially valuable target to search for macro-induced fluorescence or macro-induced lightning. However, it is currently unclear why lightning does not form over the entire surface of Jupiter but only the poles. This could reduce the region of parameter space that could be probed through this method. However, we shade, in Figure 2, the region of parameter space that could be probed assuming that lightning occurs only over $10\%$ of the surface of Jupiter, which is a likely underestimate, and assuming lightning is identical on Jupiter compared to the Earth. We defer detailed discussion of both points for a future paper once more is known about lightning on Jupiter.
 
     \begin{figure*}
-        \includegraphics[width=\textwidth]{lightning_constraints/lightningconstraints.pdf}
+        \includegraphics[width=\textwidth]{lightningconstraints.pdf}
         \caption{
             Figure 1 of \cite{Sidhu2020reconsider} with the updated constraints discussed in the text. Earth lightning projections are in black hatching and Jupiter lightning projections are in cyan hatching. The lower right right constraint curves up because the number density of macros decreases with increased mass which requires a larger fraction of the velocity distribution. The step in the lower right is the average observed minimum macro velocity due to gravitational infall.
             \\
@@ -375,7 +373,7 @@ Cleveland, Ohio 44106-7079, USA}
 % -----------------------------------------------------------------------------
 
 \bibliographystyle{apsrev4-1}
-\bibliography{references}
+\bibliography{references.bib}
 
 % -----------------------------------------------------------------------------
 
