--- a/references.bib
+++ b/references.bib
@@ -123,11 +123,18 @@
 
 
 @article{Cyncynates2016,
-        Title = {Reconsidering seismological constraints on the available parameter space of macroscopic dark matter},
-       Author = {David Cyncynates and Joshua Chiel and Jagjit Sidhu and Glenn D. Starkman},
-         Year = {2016},
-       Eprint = {arXiv:1610.09680},
-      journal = {Physical Review D}
+    author = "Cyncynates, David and Chiel, Joshua and Sidhu, Jagjit and Starkman, Glenn D.",
+    title = "{Reconsidering seismological constraints on the available parameter space of macroscopic dark matter}",
+    eprint = "1610.09680",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.95.063006",
+    journal = "Phys. Rev. D",
+    volume = "95",
+    number = "6",
+    pages = "063006",
+    year = "2017",
+    note = "[Addendum: Phys.Rev.D 95, 129903 (2017)]"
 }
 
 
@@ -436,18 +443,21 @@
  SLACcitation = "%%CITATION = ARXIV:1808.06978;%%"
 }
 
+
 @article{Sidhu2019granite,
-  doi = {10.1103/physrevd.100.103015},
-  url = {https://doi.org/10.1103/physrevd.100.103015},
-  year = {2019},
-  month = nov,
-  publisher = {American Physical Society ({APS})},
-  volume = {100},
-  number = {10},
-  author = {Jagjit Singh Sidhu and Glenn Starkman and Ralph Harvey},
-  title = {Counter-top search for macroscopic dark matter},
-  journal = {Physical Review D}
+    author = "Sidhu, Jagjit Singh and Starkman, Glenn and Harvey, Ralph",
+    title = "{Counter-top search for macroscopic dark matter}",
+    eprint = "1905.10025",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.1103/PhysRevD.100.103015",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "10",
+    pages = "103015",
+    year = "2019"
 }
+
 
 @article{EisazadehFar2011,
   doi = {10.1115/1.4003881},
@@ -464,16 +474,17 @@
 
 
 @article{Sidhu2019bolide,
-  doi = {10.1103/physrevd.100.123008},
-  url = {https://doi.org/10.1103/physrevd.100.123008},
-  year = {2019},
-  month = dec,
-  publisher = {American Physical Society ({APS})},
-  volume = {100},
-  number = {12},
-  author = {Jagjit Singh Sidhu and Glenn Starkman},
-  title = {Macroscopic dark matter constraints from bolide camera networks},
-  journal = {Physical Review D}
+    author = "Sidhu, Jagjit Singh and Starkman, Glenn",
+    title = "{Macroscopic Dark Matter Constraints from Bolide Camera Networks}",
+    eprint = "1908.00557",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.100.123008",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "12",
+    pages = "123008",
+    year = "2019"
 }
 
 
@@ -490,17 +501,19 @@
   journal = {Physics Letters B}
 }
 
+
 @article{Sidhu2020charge,
-          doi = {10.1103/physrevd.101.043526},
-          url = {https://doi.org/10.1103/physrevd.101.043526},
-         year = {2020},
-        month = feb,
-    publisher = {American Physical Society ({APS})},
-       volume = {101},
-       number = {4},
-       author = {Jagjit Singh Sidhu},
-        title = {Charge constraints of macroscopic dark matter},
-      journal = {Physical Review D}
+    author = "Singh Sidhu, Jagjit",
+    title = "{Charge Constraints of Macroscopic Dark Matter}",
+    eprint = "1912.04732",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.101.043526",
+    journal = "Phys. Rev. D",
+    volume = "101",
+    number = "4",
+    pages = "043526",
+    year = "2020"
 }
 
 
@@ -513,16 +526,17 @@
 
 
 @article{Sidhu2020reconsider,
-          doi = {10.1103/physrevd.101.083503},
-          url = {https://doi.org/10.1103/physrevd.101.083503},
-         year = {2020},
-        month = apr,
-    publisher = {American Physical Society ({APS})},
-       volume = {101},
-       number = {8},
-       author = {Jagjit Singh Sidhu and Glenn D. Starkman},
-        title = {Reconsidering astrophysical constraints on macroscopic dark matter},
-      journal = {Physical Review D}
+    author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
+    title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
+    eprint = "1912.04053",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.101.083503",
+    journal = "Phys. Rev. D",
+    volume = "101",
+    number = "8",
+    pages = "083503",
+    year = "2020"
 }
 
 
