--- a/macro_paper.tex
+++ b/macro_paper.tex
@@ -1,6 +1,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % 
-% Macroscopic Dark Matter Atmospheric Signals
+% Straight Lightning as a Signature of Macroscopic Dark Matter
 % By Jagjit Sidhu, Nathaniel Starkman, Harrison Winch, & Glenn Starkman
 % 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -29,20 +29,20 @@
 %%% SETUP
 
 \documentclass[%
- reprint,
+reprint,
 %superscriptaddress,
 %groupedaddress,
 %unsortedaddress,
 %runinaddress,
 %frontmatterverbose, 
-%preprint,
+% preprint,
 %preprintnumbers,
 %nofootinbib,
 %nobibnotes,
 %bibnotes,
  amsmath,amssymb,
  aps,
-%pra,
+ prd,
 %prb,
 %rmp,
 %prstab,
@@ -60,7 +60,7 @@
 
 \usepackage{graphicx}% Include figure files
 \usepackage{dcolumn}% Align table columns on decimal point
-\usepackage{bm}% bold math
+\usepackage{bm} % bold math
 \usepackage{xcolor}
 \usepackage{gensymb}
 \usepackage[normalem]{ulem}
@@ -108,7 +108,7 @@ Cleveland, Ohio 44106-7079, USA}
 
 \begin{abstract}
 
-    Macroscopic dark matter (macros) is a broad class of alternative candidates to particle dark matter. These candidates would transfer energy to matter primarily through  elastic scattering. A sufficiently large macro passing through the atmosphere would produce a straight channel of ionized plasma. If the cross-section of the macro is $\sigma_x\gtrapprox6\times10^{-9}cm^2$, then under atmospheric conditions conducive to lightning (eg. a thunderstorm) the plasma channel would be sufficient to seed a lightning strike with a single leader. This is entirely unlike ordinary bolt lightning in which a long sequence of hundreds or thousands of few-meter-long leaders are strung together. This macro-induced lightning would be extremely straight, and thus highly distinctive. Neither wind shear nor magnetohydrodynamic instabilities would markedly spoil its straightness. The only photographically documented case of a straight lightning bolt is probably not straight enough to have been macro-induced.
+    Macroscopic dark matter (macros) is a broad class of alternative candidates to particle dark matter. These candidates would transfer energy to matter primarily through  elastic scattering. A sufficiently large macro passing through the atmosphere would produce a straight channel of ionized plasma. If the cross-section of the macro is $\sigma_x \gtrapprox 6 \times 10^{-9} cm^2$, then under atmospheric conditions conducive to lightning (eg. a thunderstorm) the plasma channel would be sufficient to seed a lightning strike with a single leader. This is entirely unlike ordinary bolt lightning in which a long sequence of hundreds or thousands of few-meter-long leaders are strung together. This macro-induced lightning would be extremely straight, and thus highly distinctive. Neither wind shear nor magnetohydrodynamic instabilities would markedly spoil its straightness. The only photographically documented case of a straight lightning bolt is probably not straight enough to have been macro-induced.
 
     We estimate the region of macro parameter space that could be probed by a search for straight lightning from the number of thunderstorms happening on Earth at any time. We also estimate the parameter space that can be probed by carefully monitoring Jupiter, e.g. using the Hubble Space Telescope.
 
