--- a/references.bib
+++ b/references.bib
@@ -2,7 +2,19 @@
  "\providecommand{\noopsort}[1]{}" 
  # "\providecommand{\singleletter}[1]{#1}%" 
 }
-
+@article{PREM,
+  doi = {10.1016/0031-9201(81)90046-7},
+  url = {https://doi.org/10.1016/0031-9201(81)90046-7},
+  year = {1981},
+  month = jun,
+  publisher = {Elsevier {BV}},
+  volume = {25},
+  number = {4},
+  pages = {297--356},
+  author = {Adam M. Dziewonski and Don L. Anderson},
+  title = {Preliminary reference Earth model},
+  journal = {Physics of the Earth and Planetary Interiors}
+}
 
 @article{Abraham2010,
           doi = {10.1016/j.nima.2010.04.023},
@@ -123,18 +135,18 @@
 
 
 @article{Cyncynates2016,
-    author = "Cyncynates, David and Chiel, Joshua and Sidhu, Jagjit and Starkman, Glenn D.",
-    title = "{Reconsidering seismological constraints on the available parameter space of macroscopic dark matter}",
-    eprint = "1610.09680",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.95.063006",
-    journal = "Phys. Rev. D",
-    volume = "95",
-    number = "6",
-    pages = "063006",
-    year = "2017",
-    note = "[Addendum: Phys.Rev.D 95, 129903 (2017)]"
+    author = "Cyncynates, David and Chiel, Joshua and Sidhu, Jagjit and Starkman, Glenn D.",
+    title = "{Reconsidering seismological constraints on the available parameter space of macroscopic dark matter}",
+    eprint = "1610.09680",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.95.063006",
+    journal = "Phys. Rev. D",
+    volume = "95",
+    number = "6",
+    pages = "063006",
+    year = "2017",
+    note = "[Addendum: Phys.Rev.D 95, 129903 (2017)]"
 }
 
 
@@ -445,17 +457,17 @@
 
 
 @article{Sidhu2019granite,
-    author = "Sidhu, Jagjit Singh and Starkman, Glenn and Harvey, Ralph",
-    title = "{Counter-top search for macroscopic dark matter}",
-    eprint = "1905.10025",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    doi = "10.1103/PhysRevD.100.103015",
-    journal = "Phys. Rev. D",
-    volume = "100",
-    number = "10",
-    pages = "103015",
-    year = "2019"
+    author = "Sidhu, Jagjit Singh and Starkman, Glenn and Harvey, Ralph",
+    title = "{Counter-top search for macroscopic dark matter}",
+    eprint = "1905.10025",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.HE",
+    doi = "10.1103/PhysRevD.100.103015",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "10",
+    pages = "103015",
+    year = "2019"
 }
 
 
@@ -474,17 +486,17 @@
 
 
 @article{Sidhu2019bolide,
-    author = "Sidhu, Jagjit Singh and Starkman, Glenn",
-    title = "{Macroscopic Dark Matter Constraints from Bolide Camera Networks}",
-    eprint = "1908.00557",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.100.123008",
-    journal = "Phys. Rev. D",
-    volume = "100",
-    number = "12",
-    pages = "123008",
-    year = "2019"
+    author = "Sidhu, Jagjit Singh and Starkman, Glenn",
+    title = "{Macroscopic Dark Matter Constraints from Bolide Camera Networks}",
+    eprint = "1908.00557",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.100.123008",
+    journal = "Phys. Rev. D",
+    volume = "100",
+    number = "12",
+    pages = "123008",
+    year = "2019"
 }
 
 
@@ -503,17 +515,17 @@
 
 
 @article{Sidhu2020charge,
-    author = "Singh Sidhu, Jagjit",
-    title = "{Charge Constraints of Macroscopic Dark Matter}",
-    eprint = "1912.04732",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.101.043526",
-    journal = "Phys. Rev. D",
-    volume = "101",
-    number = "4",
-    pages = "043526",
-    year = "2020"
+    author = "Singh Sidhu, Jagjit",
+    title = "{Charge Constraints of Macroscopic Dark Matter}",
+    eprint = "1912.04732",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.101.043526",
+    journal = "Phys. Rev. D",
+    volume = "101",
+    number = "4",
+    pages = "043526",
+    year = "2020"
 }
 
 
@@ -526,17 +538,17 @@
 
 
 @article{Sidhu2020reconsider,
-    author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
-    title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
-    eprint = "1912.04053",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.101.083503",
-    journal = "Phys. Rev. D",
-    volume = "101",
-    number = "8",
-    pages = "083503",
-    year = "2020"
+    author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
+    title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
+    eprint = "1912.04053",
+    archivePrefix = "arXiv",
+    primaryClass = "astro-ph.CO",
+    doi = "10.1103/PhysRevD.101.083503",
+    journal = "Phys. Rev. D",
+    volume = "101",
+    number = "8",
+    pages = "083503",
+    year = "2020"
 }
 
 
@@ -637,4 +649,179 @@ collaboration = {Particle Data Group},
        author = {Peter Lowenstein},
      journal  = {Rare straight lightning over Zimbabwe, https://earthsky.org/todays-image/rare-straight-lightning-over-zimbabwe},
          year = {Accessed: 06.13.2020}
+}
+
+
+@ARTICLE{code_Astropy2013,
+       author = {{Astropy Collaboration} and {Robitaille}, Thomas P.
+         {Tollerud}, Erik J. and {Greenfield}, Perry and {Droettboom}, Michael and
+         {Bray}, Erik and {Aldcroft}, Tom and {Davis}, Matt and
+         {Ginsburg}, Adam and {Price-Whelan}, Adrian M. and
+         {Kerzendorf}, Wolfgang E. and {Conley}, Alexander and {Crighton}, Neil and
+         {Barbary}, Kyle and {Muna}, Demitri and {Ferguson}, Henry and
+         {Grollier}, Fr{\'e}d{\'e}ric and {Parikh}, Madhura M. and
+         {Nair}, Prasanth H. and {Unther}, Hans M. and {Deil}, Christoph and
+         {Woillez}, Julien and {Conseil}, Simon and {Kramer}, Roban and
+         {Turner}, James E.~H. and {Singer}, Leo and {Fox}, Ryan and
+         {Weaver}, Benjamin A. and {Zabalza}, Victor and {Edwards}, Zachary I. and
+         {Azalee Bostroem}, K. and {Burke}, D.~J. and {Casey}, Andrew R. and
+         {Crawford}, Steven M. and {Dencheva}, Nadia and {Ely}, Justin and
+         {Jenness}, Tim and {Labrie}, Kathleen and {Lim}, Pey Lian and
+         {Pierfederici}, Francesco and {Pontzen}, Andrew and {Ptak}, Andy and
+         {Refsdal}, Brian and {Servillat}, Mathieu and {Streicher}, Ole
+        },
+        title = "{Astropy: A community Python package for astronomy}",
+      journal = {Astronomy and Astrophysics {AAP}},
+     keywords = {methods: data analysis, methods: miscellaneous, virtual observatory tools, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = {2013},
+        month = {Oct},
+       volume = {558},
+          eid = {A33},
+        pages = {A33},
+          doi = {10.1051/0004-6361/201322068},
+archivePrefix = {arXiv},
+       eprint = {1307.6212},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013A&A...558A..33A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{code_Astropy2018,
+       author = {{Astropy Collaboration} and {Price-Whelan}, A.~M.
+         {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
+         {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and
+         {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {Vand
+        erPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and
+         {de Val-Borro}, M. and {Aldcroft}, T.~L. and {Cruz}, K.~L. and
+         {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Ardelean}, C. and
+         {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and
+         {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and
+         {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and
+         {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and
+         {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and
+         {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and
+         {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and
+         {Corrales}, L. and {Crichton}, D. and {D'Avella}, D. and {Deil}, C. and
+         {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and
+         {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and
+         {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and
+         {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and
+         {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and
+         {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and
+         {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and
+         {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and
+         {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and
+         {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and
+         {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and
+         {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and
+         {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and
+         {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and
+         {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and
+         {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and
+         {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and
+         {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and
+         {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and
+         {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and
+         {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and
+         {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and
+         {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and
+         {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and
+         {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and
+         {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and
+         {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and
+         {Zabalza}, V. and {Astropy Contributors}
+        },
+        title = "{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}",
+      journal = {Astronomical Journal {AJ}},
+     keywords = {methods: data analysis, methods: miscellaneous, methods: statistical, reference systems, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = {2018},
+        month = {Sep},
+       volume = {156},
+       number = {3},
+          eid = {123},
+        pages = {123},
+          doi = {10.3847/1538-3881/aabc4f},
+archivePrefix = {arXiv},
+       eprint = {1801.02634},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018AJ....156..123A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{code_Perez2007,
+       author = {{Perez}, Fernando and {Granger}, Brian E.},
+        title = "{IPython: A System for Interactive Scientific Computing}",
+      journal = {Computing in Science and Engineering},
+         year = "2007",
+        month = "Jan",
+       volume = {9},
+       number = {3},
+        pages = {21-29},
+          doi = {10.1109/MCSE.2007.53},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2007CSE.....9c..21P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{code_Hunter2007,
+       author = {Hunter,John D. },
+        title = {Matplotlib: A 2D Graphics Environment},
+      journal = {Computing in Science \& Engineering},
+       volume = {9},
+       number = {3},
+        pages = {90-95},
+         year = {2007},
+          doi = {10.1109/MCSE.2007.55},
+          URL = {https://aip.scitation.org/doi/abs/10.1109/MCSE.2007.55},
+       eprint = {https://aip.scitation.org/doi/pdf/10.1109/MCSE.2007.55}
+}
+
+
+@ARTICLE{code_Walt2011,
+       author = {Walt,Stéfan van der  and Colbert,S. Chris  and Varoquaux,Gaël },
+        title = {The NumPy Array: A Structure for Efficient Numerical Computation},
+      journal = {Computing in Science \& Engineering},
+       volume = {13},
+       number = {2},
+        pages = {22-30},
+         year = {2011},
+          doi = {10.1109/MCSE.2011.37},
+          URL = {https://aip.scitation.org/doi/abs/10.1109/MCSE.2011.37},
+       eprint = {https://aip.scitation.org/doi/pdf/10.1109/MCSE.2011.37}
+}
+
+
+@article{code_utilipy2020,
+        title = {nstarman/utilipy: v1.0.1 with DOI fix},
+          DOI = {10.5281/zenodo.3740639},
+ abstractNote = {<p>one push more recent than v1.0.1 to include a fix to the Zenodo DOI.</p>},
+    publisher = {Zenodo},
+       author = {{Starkman}, Nathaniel},
+         year = {2020},
+        month = {Apr}
+}
+
+
+@misc{code_starkplot2020,
+       author = {{Starkman}, Nathaniel},
+        title = {nstarman/starkplot: v0.1.0},
+        month = jan,
+         year = 2020,
+    publisher = {Zenodo},
+      version = {v0.1.0},
+          doi = {10.5281/zenodo.3610363},
+          url = {https://doi.org/10.5281/zenodo.3610363}
+}
+
+
+@article{code_macrolightning2020,
+       author = {{Starkman}, Nathaniel and {Jagjit}, Sidhu and {Winch}, Harrison and {Starkman}, Glenn},
+        title = {cwru-pat/macro_lightning: Code Release},
+          DOI = {10.5281/zenodo.3926341},
+ abstractNote = {Constrain Macro-DM with lightning, on Earth and Jupiter.},
+    publisher = {Zenodo},
+         year = {2020},
+        month = {Jul}
 }
