--- a/references.bib
+++ b/references.bib
@@ -2,21 +2,9 @@
  "\providecommand{\noopsort}[1]{}" 
  # "\providecommand{\singleletter}[1]{#1}%" 
 }
-@article{PREM,
-  doi = {10.1016/0031-9201(81)90046-7},
-  url = {https://doi.org/10.1016/0031-9201(81)90046-7},
-  year = {1981},
-  month = jun,
-  publisher = {Elsevier {BV}},
-  volume = {25},
-  number = {4},
-  pages = {297--356},
-  author = {Adam M. Dziewonski and Don L. Anderson},
-  title = {Preliminary reference Earth model},
-  journal = {Physics of the Earth and Planetary Interiors}
-}
 
-@article{Abraham2010,
+
+@ARTICLE{Abraham2010,
           doi = {10.1016/j.nima.2010.04.023},
           url = {https://doi.org/10.1016/j.nima.2010.04.023},
          year = {2010},
@@ -30,7 +18,7 @@
 }
 
 
-@article{Alcock2001,
+@ARTICLE{Alcock2001,
           doi = {10.1086/319636},
           url = {https://doi.org/10.1086/319636},
          year = {2001},
@@ -45,7 +33,19 @@
 }
 
 
-@article{Bovy2012,
+@article{Babich2012,
+       author = {Babich, Leonid P. and Bochkov, Evgeniĭ I. and Dwyer, Joseph R. and Kutsyk, Igor M.},
+        title = {Numerical simulations of local thundercloud field enhancements caused by runaway avalanches seeded by cosmic rays and their role in lightning initiation},
+      journal = {Journal of Geophysical Research: Space Physics},
+       volume = {117},
+       number = {A9},
+     keywords = {cosmic rays, lightning, runaway electrons, thunderstorms},
+          doi = {10.1029/2012JA017799},
+         year = {2012}
+}
+
+
+@ARTICLE{Bovy2012,
           doi = {10.1088/0004-637x/756/1/89},
           url = {https://doi.org/10.1088/0004-637x/756/1/89},
          year = {2012},
@@ -81,7 +81,7 @@
 }
 
 
-@article{Capitelli2000, 
+@ARTICLE{Capitelli2000, 
        author = {Capitelli, M and Colonna, G and Gorse, C and D'Angola, A}, 
         title = {Transport {P}roperties of {H}igh {T}emperature {A}ir in {L}ocal {T}hermodynamic {E}quilibrium}, 
       journal = {Euro. Phys. Jour. D},
@@ -91,7 +91,7 @@
 }
 
 
-@article{Carr2010,
+@ARTICLE{Carr2010,
           doi = {10.1103/physrevd.81.104019},
           url = {https://doi.org/10.1103/physrevd.81.104019},
          year = {2010},
@@ -106,7 +106,7 @@
 }
 
 
-@article{Choi2004,
+@ARTICLE{Choi2004,
         title = "Field measurement and experimental study of wind speed profile during thunderstorms",
       journal = "Journal of Wind Engineering and Industrial Aerodynamics",
        volume = "92",
@@ -121,7 +121,7 @@
 }
 
 
-@article{Christian2003,
+@ARTICLE{Christian2003,
        author = {Christian, Hugh J. and Blakeslee, Richard J. and Boccippio, Dennis J. and Boeck, William L. and Buechler, Dennis E. and Driscoll, Kevin T. and Goodman, Steven J. and Hall, John M. and Koshak, William J. and Mach, Douglas M. and Stewart, Michael F.},
         title = {Global frequency and distribution of lightning as observed from space by the Optical Transient Detector},
       journal = {Journal of Geophysical Research: Atmospheres},
@@ -134,23 +134,23 @@
 }
 
 
-@article{Cyncynates2016,
-    author = "Cyncynates, David and Chiel, Joshua and Sidhu, Jagjit and Starkman, Glenn D.",
-    title = "{Reconsidering seismological constraints on the available parameter space of macroscopic dark matter}",
-    eprint = "1610.09680",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.95.063006",
-    journal = "Phys. Rev. D",
-    volume = "95",
-    number = "6",
-    pages = "063006",
-    year = "2017",
-    note = "[Addendum: Phys.Rev.D 95, 129903 (2017)]"
+@ARTICLE{Cyncynates2016,
+       author = "Cyncynates, David and Chiel, Joshua and Sidhu, Jagjit and Starkman, Glenn D.",
+        title = "{Reconsidering seismological constraints on the available parameter space of macroscopic dark matter}",
+       eprint = "1610.09680",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.CO",
+          doi = "10.1103/PhysRevD.95.063006",
+      journal = "Phys. Rev. D",
+       volume = "95",
+       number = "6",
+        pages = "063006",
+         year = "2017",
+         note = "[Addendum: Phys.Rev.D 95, 129903 (2017)]"
 }
 
 
-@article{DeRujula1984axn,
+@ARTICLE{DeRujula1984axn,
        author = "De Rujula, A. and Glashow, S. L.",
         title = "{Nuclearites: A Novel Form of Cosmic Radiation}",
       journal = "Nature",
@@ -163,7 +163,7 @@
 }
 
 
-@article{DwyerUman2014,
+@ARTICLE{DwyerUman2014,
        author = {Dwyer, Joseph R and Uman, Martin A},
         title = {{The physics of lightning}},
       journal = {Physics Reports},
@@ -175,7 +175,22 @@
 }
 
 
-@article{Freese2013,
+@ARTICLE{Dziewonski1981,
+          doi = {10.1016/0031-9201(81)90046-7},
+          url = {https://doi.org/10.1016/0031-9201(81)90046-7},
+         year = {1981},
+        month = jun,
+    publisher = {Elsevier {BV}},
+       volume = {25},
+       number = {4},
+        pages = {297--356},
+       author = {Adam M. Dziewonski and Don L. Anderson},
+        title = {Preliminary reference Earth model},
+      journal = {Physics of the Earth and Planetary Interiors}
+}
+
+
+@ARTICLE{Freese2013,
           doi = {10.1103/revmodphys.85.1561},
           url = {https://doi.org/10.1103/revmodphys.85.1561},
          year = {2013},
@@ -190,7 +205,7 @@
 }
 
 
-@article{Graham2018,
+@ARTICLE{Graham2018,
           doi = {10.1103/physrevd.98.115027},
           url = {https://doi.org/10.1103/physrevd.98.115027},
          year = {2018},
@@ -205,7 +220,7 @@
 }
 
 
-@article{Griest2013,
+@ARTICLE{Griest2013,
           doi = {10.1103/physrevlett.111.181302},
           url = {https://doi.org/10.1103/physrevlett.111.181302},
          year = {2013},
@@ -220,7 +235,27 @@
 }
 
 
-@article{Hill2012,
+@ARTICLE{Hare2020,
+       author = {{Hare}, B.~M. {et al}},
+        title = "{Radio Emission Reveals Inner Meter-Scale Structure of Negative Lightning Leader Steps}",
+      journal = {Physical Review Letters},
+     keywords = {Physics - Atmospheric and Oceanic Physics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2020,
+        month = mar,
+       volume = {124},
+       number = {10},
+          eid = {105101},
+        pages = {105101},
+          doi = {10.1103/PhysRevLett.124.105101},
+archivePrefix = {arXiv},
+       eprint = {2007.03231},
+ primaryClass = {physics.ao-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020PhRvL.124j5101H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Hill2012,
          sdoi = {10.1029/2012gl051932},
           url = {https://doi.org/10.1029/2012gl051932},
          year = {2012},
@@ -235,7 +270,7 @@
 }
 
 
-@article{Hill2013,
+@ARTICLE{Hill2013,
           doi = {10.1002/jgrd.50660},
           url = {https://doi.org/10.1002/jgrd.50660},
          year = {2013},
@@ -264,7 +299,7 @@
 }
 
 
-@article{IVY-MIKE1987,
+@ARTICLE{IVY-MIKE1987,
        author = {Colvin, J. D. and Mitchell, C. K. and Greig, J. R. and Murphy, D. P. and Pechacek, R. E. and Raleigh, M.},
         title = {An empirical study of the nuclear explosion-induced lightning seen on IVY-MIKE},
       journal = {Journal of Geophysical Research: Atmospheres},
@@ -276,7 +311,7 @@
 }
 
 
-@article{jacobs2015macro,
+@ARTICLE{jacobs2015macro,
        Author = {David M. Jacobs and Glenn D. Starkman and Bryan W. Lynn},
         Title = {Macro Dark Matter},
          Year = {2014},
@@ -287,7 +322,7 @@
 }
 
 
-@article{jacobs2015resonant,
+@ARTICLE{jacobs2015resonant,
           doi = {10.1103/physrevd.91.115023},
           url = {https://doi.org/10.1103/physrevd.91.115023},
          year = {2015},
@@ -302,7 +337,7 @@
 }
 
 
-@article{Kasparian2008,
+@ARTICLE{Kasparian2008,
        author = {J\'{e}r\^{o}me Kasparian and Roland Ackermann and Yves-Bernard Andr\'{e} and Gr\'{e}goire M\'{e}chain and Guillaume M\'{e}jean and Bernard Prade and Philipp Rohwetter and Estelle Salmon and Kamil Stelmaszczyk and Jin Yu and Andr\'{e} Mysyrowicz and Roland Sauerbrey and Ludger W\"{o}ste and Jean-Pierre Wolf},
       journal = {Opt. Express},
      keywords = {Atmospheric propagation; Ultrafast lasers; Self-action effects; Ultrafast nonlinear optics; Plasmas; Corona discharges; Laser beams; Laser filaments; Laser operation; Laser sources; Ultrashort pulses},
@@ -318,7 +353,7 @@
 }
 
 
-@article{Kuntz2015,
+@ARTICLE{Kuntz2015,
           doi = {10.1088/0004-637x/808/2/143},
           url = {https://doi.org/10.1088/0004-637x/808/2/143},
          year = {2015},
@@ -333,7 +368,7 @@
 }
 
 
-@article{Lynn1990,
+@ARTICLE{Lynn1990,
       journal = "Nuclear Physics B",
         title = "Strange baryon matter",
        volume = "345",
@@ -350,7 +385,7 @@
 }
 
 
-@article{Mackerras1998,
+@ARTICLE{Mackerras1998,
        author = {Mackerras, David and Darveniza, Mat and Orville, Richard E. and Williams, Earle R. and Goodman, Steven J.},
         title = {Global lightning: Total, cloud and ground flash estimates},
       journal = {Journal of Geophysical Research: Atmospheres},
@@ -372,7 +407,7 @@
 }
 
 
-@article{Ness2004,
+@ARTICLE{Ness2004,
           doi = {10.1051/0004-6361:20035736},
           url = {https://doi.org/10.1051/0004-6361:20035736},
          year = {2004},
@@ -387,7 +422,7 @@
 }
 
 
-@article{Nelson1990iu,
+@ARTICLE{Nelson1990iu,
        author = "Nelson, Ann E.",
         title = "{Kaon Condensation in the Early Universe}",
       journal = "Physical Letters",
@@ -400,7 +435,7 @@
 }
 
 
-@article{Niikura2019,
+@ARTICLE{Niikura2019,
           doi = {10.1038/s41550-019-0723-1},
           url = {https://doi.org/10.1038/s41550-019-0723-1},
          year = {2019},
@@ -415,7 +450,19 @@
 }
 
 
-@article{Price1988ge,
+@ARTICLE{Picone1983,
+       author = {Picone,J. M.  and Boris,J. P. },
+        title = {Vorticity generation by asymmetric energy deposition in a gaseous medium},
+      journal = {The Physics of Fluids},
+       volume = {26},
+       number = {2},
+        pages = {365-382},
+         year = {1983},
+          doi = {10.1063/1.864173},
+}
+
+
+@ARTICLE{Price1988ge,
        author = "Price, P. B.",
         title = "{Limits on Contribution of Cosmic Nuclearites to Galactic
                   Dark Matter}",
@@ -428,7 +475,7 @@
 }
 
 
-@article{rocket2012,
+@ARTICLE{rocket2012,
        author = {Pilkey, J. T. and Uman, M. A. and Hill, J. D. and Ngin, T. and Gamerota, W. R. and Jordan, D. M. and Rison, W. and Krehbiel, P. R. and Edens, H. E. and Biggerstaff, M. I. and Hyland, P.},
         title = {Rocket-and-wire triggered lightning in 2012 tropical storm Debby in the absence of natural lightning},
       journal = {Journal of Geophysical Research: Atmospheres},
@@ -441,7 +488,7 @@
 }
 
 
-@article{Sidhu2018auv,
+@ARTICLE{Sidhu2018auv,
        author = "Sidhu, Jagjit Singh and Abraham, Roshan Mammen and
                   Covault, Corbin and Starkman, Glenn",
         title = "{Macro detection using fluorescence detectors}",
@@ -456,76 +503,86 @@
 }
 
 
-@article{Sidhu2019granite,
-    author = "Sidhu, Jagjit Singh and Starkman, Glenn and Harvey, Ralph",
-    title = "{Counter-top search for macroscopic dark matter}",
-    eprint = "1905.10025",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.HE",
-    doi = "10.1103/PhysRevD.100.103015",
-    journal = "Phys. Rev. D",
-    volume = "100",
-    number = "10",
-    pages = "103015",
-    year = "2019"
+@ARTICLE{Sidhu2019granite,
+       author = "Sidhu, Jagjit Singh and Starkman, Glenn and Harvey, Ralph",
+        title = "{Counter-top search for macroscopic dark matter}",
+       eprint = "1905.10025",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.HE",
+          doi = "10.1103/PhysRevD.100.103015",
+      journal = "Phys. Rev. D",
+       volume = "100",
+       number = "10",
+        pages = "103015",
+         year = "2019"
 }
 
 
-@article{EisazadehFar2011,
-  doi = {10.1115/1.4003881},
-  url = {https://doi.org/10.1115/1.4003881},
-  year = {2011},
-  month = may,
-  publisher = {{ASME} International},
-  volume = {133},
-  number = {2},
-  author = {Kian Eisazadeh-Far and Hameed Metghalchi and James C. Keck},
-  title = {Thermodynamic Properties of Ionized Gases at High Temperatures},
-  journal = {Journal of Energy Resources Technology}
+@ARTICLE{EisazadehFar2011,
+          doi = {10.1115/1.4003881},
+          url = {https://doi.org/10.1115/1.4003881},
+         year = {2011},
+        month = may,
+    publisher = {{ASME} International},
+       volume = {133},
+       number = {2},
+       author = {Kian Eisazadeh-Far and Hameed Metghalchi and James C. Keck},
+        title = {Thermodynamic Properties of Ionized Gases at High Temperatures},
+      journal = {Journal of Energy Resources Technology}
 }
 
 
-@article{Sidhu2019bolide,
-    author = "Sidhu, Jagjit Singh and Starkman, Glenn",
-    title = "{Macroscopic Dark Matter Constraints from Bolide Camera Networks}",
-    eprint = "1908.00557",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.100.123008",
-    journal = "Phys. Rev. D",
-    volume = "100",
-    number = "12",
-    pages = "123008",
-    year = "2019"
+@ARTICLE{scientific_american_2008,
+        title = {Do cosmic rays cause lightning?},
+       author = {Scientific American},
+          url = {https://www.scientificamerican.com/article/experts-do-cosmic-rays-cause-lightning/},
+      journal = {Scientific American},
+         year = {2008},
+        month = {Jan}
 }
 
 
-@article{Sidhu2019death,
-  doi = {10.1016/j.physletb.2020.135300},
-  url = {https://doi.org/10.1016/j.physletb.2020.135300},
-  year = {2020},
-  month = apr,
-  publisher = {Elsevier {BV}},
-  volume = {803},
-  pages = {135300},
-  author = {Jagjit Singh Sidhu and Robert Scherrer and Glenn Starkman},
-  title = {Death and serious injury from dark matter},
-  journal = {Physics Letters B}
+@ARTICLE{Sidhu2019bolide,
+       author = "Sidhu, Jagjit Singh and Starkman, Glenn",
+        title = "{Macroscopic Dark Matter Constraints from Bolide Camera Networks}",
+       eprint = "1908.00557",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.CO",
+          doi = "10.1103/PhysRevD.100.123008",
+      journal = "Phys. Rev. D",
+       volume = "100",
+       number = "12",
+        pages = "123008",
+         year = "2019"
 }
 
 
-@article{Sidhu2020charge,
-    author = "Singh Sidhu, Jagjit",
-    title = "{Charge Constraints of Macroscopic Dark Matter}",
-    eprint = "1912.04732",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.101.043526",
-    journal = "Phys. Rev. D",
-    volume = "101",
-    number = "4",
-    pages = "043526",
-    year = "2020"
+@ARTICLE{Sidhu2019death,
+          doi = {10.1016/j.physletb.2020.135300},
+          url = {https://doi.org/10.1016/j.physletb.2020.135300},
+         year = {2020},
+        month = apr,
+    publisher = {Elsevier {BV}},
+       volume = {803},
+        pages = {135300},
+       author = {Jagjit Singh Sidhu and Robert Scherrer and Glenn Starkman},
+        title = {Death and serious injury from dark matter},
+      journal = {Physics Letters B}
+}
+
+
+@ARTICLE{Sidhu2020charge,
+       author = "Singh Sidhu, Jagjit",
+        title = "{Charge Constraints of Macroscopic Dark Matter}",
+       eprint = "1912.04732",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.CO",
+          doi = "10.1103/PhysRevD.101.043526",
+      journal = "Phys. Rev. D",
+       volume = "101",
+       number = "4",
+        pages = "043526",
+         year = "2020"
 }
 
 
@@ -537,22 +594,22 @@
 }
 
 
-@article{Sidhu2020reconsider,
-    author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
-    title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
-    eprint = "1912.04053",
-    archivePrefix = "arXiv",
-    primaryClass = "astro-ph.CO",
-    doi = "10.1103/PhysRevD.101.083503",
-    journal = "Phys. Rev. D",
-    volume = "101",
-    number = "8",
-    pages = "083503",
-    year = "2020"
+@ARTICLE{Sidhu2020reconsider,
+       author = "Singh Sidhu, Jagjit and Starkman, Glenn D.",
+        title = "{Reconsidering astrophysical constraints on macroscopic dark matter}",
+       eprint = "1912.04053",
+archivePrefix = "arXiv",
+ primaryClass = "astro-ph.CO",
+          doi = "10.1103/PhysRevD.101.083503",
+      journal = "Phys. Rev. D",
+       volume = "101",
+       number = "8",
+        pages = "083503",
+         year = "2020"
 }
 
 
-@article{Tanabashi2018,
+@ARTICLE{Tanabashi2018,
         title = {Review of {P}article {P}hysics},
        author = {Tanabashi, M. and others},
 collaboration = {Particle Data Group},
@@ -569,7 +626,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Tisserand2007,
+@ARTICLE{Tisserand2007,
           doi = {10.1051/0004-6361:20066017},
           url = {https://doi.org/10.1051/0004-6361:20066017},
          year = {2007},
@@ -584,7 +641,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Wang1999,
+@ARTICLE{Wang1999,
           doi = {10.1029/1998jd200070},
           url = {https://doi.org/10.1029/1998jd200070},
          year = {1999},
@@ -599,7 +656,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Wilkinson2014angular,
+@ARTICLE{Wilkinson2014angular,
           doi = {10.1088/1475-7516/2014/04/026},
           url = {https://doi.org/10.1088/1475-7516/2014/04/026},
          year = {2014},
@@ -614,7 +671,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Witten1984,
+@ARTICLE{Witten1984,
           doi = {10.1103/physrevd.30.272},
           url = {https://doi.org/10.1103/physrevd.30.272},
          year = {1984},
@@ -629,7 +686,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Zhitnitsky2003,
+@ARTICLE{Zhitnitsky2003,
           doi = {10.1088/1475-7516/2003/10/010},
           url = {https://doi.org/10.1088/1475-7516/2003/10/010},
          year = {2003},
@@ -644,7 +701,7 @@ collaboration = {Particle Data Group},
 }
 
 
-@article{Zimbabwe,
+@ARTICLE{Zimbabwe,
         title = {Rare straight lightning over Zimbabwe},
        author = {Peter Lowenstein},
      journal  = {Rare straight lightning over Zimbabwe, https://earthsky.org/todays-image/rare-straight-lightning-over-zimbabwe},
@@ -653,22 +710,7 @@ collaboration = {Particle Data Group},
 
 
 @ARTICLE{code_Astropy2013,
-       author = {{Astropy Collaboration} and {Robitaille}, Thomas P.
-         {Tollerud}, Erik J. and {Greenfield}, Perry and {Droettboom}, Michael and
-         {Bray}, Erik and {Aldcroft}, Tom and {Davis}, Matt and
-         {Ginsburg}, Adam and {Price-Whelan}, Adrian M. and
-         {Kerzendorf}, Wolfgang E. and {Conley}, Alexander and {Crighton}, Neil and
-         {Barbary}, Kyle and {Muna}, Demitri and {Ferguson}, Henry and
-         {Grollier}, Fr{\'e}d{\'e}ric and {Parikh}, Madhura M. and
-         {Nair}, Prasanth H. and {Unther}, Hans M. and {Deil}, Christoph and
-         {Woillez}, Julien and {Conseil}, Simon and {Kramer}, Roban and
-         {Turner}, James E.~H. and {Singer}, Leo and {Fox}, Ryan and
-         {Weaver}, Benjamin A. and {Zabalza}, Victor and {Edwards}, Zachary I. and
-         {Azalee Bostroem}, K. and {Burke}, D.~J. and {Casey}, Andrew R. and
-         {Crawford}, Steven M. and {Dencheva}, Nadia and {Ely}, Justin and
-         {Jenness}, Tim and {Labrie}, Kathleen and {Lim}, Pey Lian and
-         {Pierfederici}, Francesco and {Pontzen}, Andrew and {Ptak}, Andy and
-         {Refsdal}, Brian and {Servillat}, Mathieu and {Streicher}, Ole
+       author = {{Astropy Collaboration} and {Astropy Contributors et al.}
         },
         title = "{Astropy: A community Python package for astronomy}",
       journal = {Astronomy and Astrophysics {AAP}},
@@ -688,49 +730,7 @@ archivePrefix = {arXiv},
 
 
 @ARTICLE{code_Astropy2018,
-       author = {{Astropy Collaboration} and {Price-Whelan}, A.~M.
-         {Sip{\H{o}}cz}, B.~M. and {G{\"u}nther}, H.~M. and {Lim}, P.~L. and
-         {Crawford}, S.~M. and {Conseil}, S. and {Shupe}, D.~L. and
-         {Craig}, M.~W. and {Dencheva}, N. and {Ginsburg}, A. and {Vand
-        erPlas}, J.~T. and {Bradley}, L.~D. and {P{\'e}rez-Su{\'a}rez}, D. and
-         {de Val-Borro}, M. and {Aldcroft}, T.~L. and {Cruz}, K.~L. and
-         {Robitaille}, T.~P. and {Tollerud}, E.~J. and {Ardelean}, C. and
-         {Babej}, T. and {Bach}, Y.~P. and {Bachetti}, M. and {Bakanov}, A.~V. and
-         {Bamford}, S.~P. and {Barentsen}, G. and {Barmby}, P. and
-         {Baumbach}, A. and {Berry}, K.~L. and {Biscani}, F. and {Boquien}, M. and
-         {Bostroem}, K.~A. and {Bouma}, L.~G. and {Brammer}, G.~B. and
-         {Bray}, E.~M. and {Breytenbach}, H. and {Buddelmeijer}, H. and
-         {Burke}, D.~J. and {Calderone}, G. and {Cano Rodr{\'\i}guez}, J.~L. and
-         {Cara}, M. and {Cardoso}, J.~V.~M. and {Cheedella}, S. and {Copin}, Y. and
-         {Corrales}, L. and {Crichton}, D. and {D'Avella}, D. and {Deil}, C. and
-         {Depagne}, {\'E}. and {Dietrich}, J.~P. and {Donath}, A. and
-         {Droettboom}, M. and {Earl}, N. and {Erben}, T. and {Fabbro}, S. and
-         {Ferreira}, L.~A. and {Finethy}, T. and {Fox}, R.~T. and
-         {Garrison}, L.~H. and {Gibbons}, S.~L.~J. and {Goldstein}, D.~A. and
-         {Gommers}, R. and {Greco}, J.~P. and {Greenfield}, P. and
-         {Groener}, A.~M. and {Grollier}, F. and {Hagen}, A. and {Hirst}, P. and
-         {Homeier}, D. and {Horton}, A.~J. and {Hosseinzadeh}, G. and {Hu}, L. and
-         {Hunkeler}, J.~S. and {Ivezi{\'c}}, {\v{Z}}. and {Jain}, A. and
-         {Jenness}, T. and {Kanarek}, G. and {Kendrew}, S. and {Kern}, N.~S. and
-         {Kerzendorf}, W.~E. and {Khvalko}, A. and {King}, J. and {Kirkby}, D. and
-         {Kulkarni}, A.~M. and {Kumar}, A. and {Lee}, A. and {Lenz}, D. and
-         {Littlefair}, S.~P. and {Ma}, Z. and {Macleod}, D.~M. and
-         {Mastropietro}, M. and {McCully}, C. and {Montagnac}, S. and
-         {Morris}, B.~M. and {Mueller}, M. and {Mumford}, S.~J. and {Muna}, D. and
-         {Murphy}, N.~A. and {Nelson}, S. and {Nguyen}, G.~H. and
-         {Ninan}, J.~P. and {N{\"o}the}, M. and {Ogaz}, S. and {Oh}, S. and
-         {Parejko}, J.~K. and {Parley}, N. and {Pascual}, S. and {Patil}, R. and
-         {Patil}, A.~A. and {Plunkett}, A.~L. and {Prochaska}, J.~X. and
-         {Rastogi}, T. and {Reddy Janga}, V. and {Sabater}, J. and
-         {Sakurikar}, P. and {Seifert}, M. and {Sherbert}, L.~E. and
-         {Sherwood-Taylor}, H. and {Shih}, A.~Y. and {Sick}, J. and
-         {Silbiger}, M.~T. and {Singanamalla}, S. and {Singer}, L.~P. and
-         {Sladen}, P.~H. and {Sooley}, K.~A. and {Sornarajah}, S. and
-         {Streicher}, O. and {Teuben}, P. and {Thomas}, S.~W. and
-         {Tremblay}, G.~R. and {Turner}, J.~E.~H. and {Terr{\'o}n}, V. and
-         {van Kerkwijk}, M.~H. and {de la Vega}, A. and {Watkins}, L.~L. and
-         {Weaver}, B.~A. and {Whitmore}, J.~B. and {Woillez}, J. and
-         {Zabalza}, V. and {Astropy Contributors}
+       author = {{Astropy Collaboration} and {Astropy Contributors et al.}
         },
         title = "{The Astropy Project: Building an Open-science Project and Status of the v2.0 Core Package}",
       journal = {Astronomical Journal {AJ}},
@@ -793,11 +793,12 @@ archivePrefix = {arXiv},
 }
 
 
-@article{code_utilipy2020,
+@ARTICLE{code_utilipy2020,
         title = {nstarman/utilipy: v1.0.1 with DOI fix},
           DOI = {10.5281/zenodo.3740639},
  abstractNote = {<p>one push more recent than v1.0.1 to include a fix to the Zenodo DOI.</p>},
     publisher = {Zenodo},
+      journal = {Zenodo},
        author = {{Starkman}, Nathaniel},
          year = {2020},
         month = {Apr}
@@ -810,18 +811,20 @@ archivePrefix = {arXiv},
         month = jan,
          year = 2020,
     publisher = {Zenodo},
+      journal = {Zenodo},
       version = {v0.1.0},
           doi = {10.5281/zenodo.3610363},
           url = {https://doi.org/10.5281/zenodo.3610363}
 }
 
 
-@article{code_macrolightning2020,
+@ARTICLE{code_macrolightning2020,
        author = {{Starkman}, Nathaniel and {Jagjit}, Sidhu and {Winch}, Harrison and {Starkman}, Glenn},
         title = {cwru-pat/macro_lightning: Code Release},
           DOI = {10.5281/zenodo.3926341},
  abstractNote = {Constrain Macro-DM with lightning, on Earth and Jupiter.},
     publisher = {Zenodo},
+      journal = {Zenodo},
          year = {2020},
         month = {Jul}
 }
